--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,8 @@ p {
        
     }
     .about a{
-        padding: 0%;
+        padding: 0;
+        
     }
     .contact-us{
         padding: 0;
