--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,11 @@
     font-family: "Roboto", serif;
 }
 .navbar img {
-    margin: 100px 57px;
+    margin: 52px 57px;
 }
 .plant-background{
    background-image: url(../assets/images/1.jpg);
-
+position: absolute;
 }
 .container {
     position: relative;
@@ -33,6 +33,7 @@
     color: #1F4529;
     text-decoration: none;
 }
+
 .about {
     text-align: center;
 }
@@ -91,12 +92,9 @@ p {
 .contact-us{
     text-align: center;
     color: #1F4529;
-    padding: 128px 100px;
+    padding: 100px 100px;
     margin-top: 100px;
     background-color: #f2f4f5;
-}
-.contact-us p{
-    
 }
 .leaf-icon{
     display: flex;
@@ -107,6 +105,9 @@ p {
 }
 .logo-image{
     margin: 28px 30px;
+}
+.icon-set{
+    padding: 15px 0;
 }
 .icon a{
     font-size: 2rem;
@@ -121,21 +122,29 @@ p {
     margin-bottom: 30px;
 }
 @media screen and (max-width: 768px) {
-
+    .container{
+        width: 100%;
+    }
     .about {
         text-align: center;
         max-width: 88%;
     }
     .about h1{
-        font-size: 38px;
+        font-size: 28px;
+    }
+    .about p{
+        font-size: 16px;
+    
     }
     .button{
         margin-bottom: 0px;
-        display: flex;
-       
+    }
+    #about{
+        margin-top: 50px;
     }
     .about a{
         padding: 0;
+        min-width: 100px;
         
     }
     .contact-us{
@@ -147,14 +156,18 @@ p {
        margin-left: 0;
     }
     p{
-        padding: 0 15px;
+        padding: 0 12px;
         
     }
     .header-content{
         padding: 0;
         margin-right: 0;
     }
-    
+    .navlink {
+       
+        margin: 10px 12px;
+    }
+
 }
 
 
